objects/UserIntoTeam__mdt.object
<CustomObject>
    <fields>
        <fullName>BU_Application1__c</fullName>
        <label>BU Application1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bu_Application2__c</fullName>
        <label>Bu Application2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserEmailId__c</fullName>
        <label>UserEmailId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>UserIntoTeam</label>
    <pluralLabel>UserIntoTeams</pluralLabel>
</CustomObject>